# zephyr-samples

./: .gitignore  README.md
hal_drivers/GPIOS/_01_toggle_pin/: CMakeLists.txt
hal_drivers/GPIOS/_01_toggle_pin/boards/: native_sim.overlay  nucleo_g0b1re.overlay  stm32h573i_dk.overlay
hal_drivers/GPIOS/_01_toggle_pin/src/: main.c
hal_drivers/GPIOS/_02_toggle_two_pins/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay  nucleo_g0b1re.overlay
hal_drivers/GPIOS/_02_toggle_two_pins/src/: main.c
hal_drivers/GPIOS/_03_read_pin/src/: main.c
hal_drivers/GPIOS/_04_write_five_pins/boards/: native_sim.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay
hal_drivers/GPIOS/_04_write_five_pins/src/: main.c
hal_drivers/GPIOS/_05_init_pins_with_hogs/: prj.conf
hal_drivers/GPIOS/_05_init_pins_with_hogs/boards/: native_sim.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nucleo_g0b1re.overlay
hal_drivers/GPIOS/_05_init_pins_with_hogs/src/: main.c
hal_drivers/GPIOS/_06_rotate_pins/boards/: native_sim.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nucleo_g0b1re.overlay
hal_drivers/GPIOS/_06_rotate_pins/src/: main.c
hal_drivers/GPIOS/_07_pin_custom_binding/: CMakeLists.txt
hal_drivers/GPIOS/_07_pin_custom_binding/boards/: native_sim.overlay
hal_drivers/GPIOS/_07_pin_custom_binding/src/: main.c
hal_drivers/GPIOS/_08_pin_interrupts/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay  nucleo_g0b1re.overlay
hal_drivers/GPIOS/_08_pin_interrupts/src/: main.c
hal_drivers/GPIOS/_09_pin_interrupts_data/src/: main.c
hal_drivers/INPUT_DRIVER/_01_basic_button/: prj.conf
hal_drivers/INPUT_DRIVER/_01_basic_button/src/: main.c
hal_drivers/INPUT_DRIVER/_02_long_press_button/: README.md
hal_drivers/INPUT_DRIVER/_02_long_press_button/src/: main.c
hal_drivers/INPUT_DRIVER/_03_double_tap_button/: CMakeLists.txt  prj.conf
hal_drivers/LED_DRIVER/_02_led_on_off_dt/: CMakeLists.txt  README.md  prj.conf
hal_drivers/LED_DRIVER/_03_led_blink_pwm/: README.md
hal_drivers/LED_DRIVER/_04_led_brightness_pwm/: README.md  prj.conf
hal_drivers/UART/_01_runtime_configuration/: prj.conf
hal_drivers/UART/_06_tx_rx_with_interrupts/: prj.conf
hal_drivers/UART/_07_tx_messages_with_dma/: prj.conf
hal_drivers/UART/_09_tx_messages_net_buffers/: prj.conf
kernel/EVENTS/_02_setting_two_events/: prj.conf
kernel/QUEUES/_04_using_dynamic_memory/: prj.conf
kernel/QUEUES/_05_queue_like_fifo/: prj.conf
kernel/THREADS/_04_thread_in_runtime/: prj.conf
kernel/WQUEUES/_05_custom_work_queue/: prj.conf
kernel/ZBUS/_01_channels_instances/: prj.conf
kernel/ZBUS/_02_listener_observer/: prj.conf
kernel/ZBUS/_03_async_listener_observer/: prj.conf
kernel/ZBUS/_04_subscriber_observer/: prj.conf
kernel/ZBUS/_05_message_subscriber_observer/: prj.conf
kernel/ZBUS/_07_two_messages_one_observer/: prj.conf
middleware/INPUTS/: README.md
middleware/INPUTS/_01_basic_button/: README.md
middleware/INPUTS/_02_long_press_button/: CMakeLists.txt  prj.conf
middleware/INPUTS/_03_double_tap_button/: README.md
middleware/LEDS/_01_led_on_off/: README.md
middleware/SHELL/_04_commnad_with_two_subcommands/: prj.conf
middleware/SHELL/_08_command_with_getopt_function/: prj.conf
middleware/SMF/_02_machine_with_entry_and_exit/: prj.conf
middleware/SMF/_04_hierarchical_state_machine/: prj.conf
middleware/SMF/_05_simple_event_machine/: prj.conf
networking/ETHERNET/: README.md
networking/ETHERNET/_01_basic_connection/: README.md  prj.conf
networking/ETHERNET/_02_basic_connection_cb/: README.md  prj.conf
networking/ETHERNET/_03_static_ip/: README.md  prj.conf
networking/ETHERNET/_04_dhcp/: CMakeLists.txt  README.md  prj.conf
networking/ETHERNET/_05_tcp_client/: README.md
networking/ETHERNET/_06_tcp_server/: CMakeLists.txt  README.md  prj.conf
networking/ETHERNET/_07_udp_sender/: CMakeLists.txt  README.md
networking/ETHERNET/_08_udp_receiver/: CMakeLists.txt  README.md  prj.conf
networking/ETHERNET/_09_http_client/: CMakeLists.txt  README.md  prj.conf
networking/ETHERNET/_10_https_client/: CMakeLists.txt  README.md  prj.conf
networking/ETHERNET/_11_http_server_basic/: CMakeLists.txt  README.md  prj.conf  sections-rom.ld
networking/ETHERNET/_12_https_server_basic/: CMakeLists.txt  README.md  certificate.h  prj.conf  sections-rom.ld
networking/ETHERNET/_12_https_server_basic/src/: main.c
networking/ETHERNET/_12_https_server_basic/src/certs/: ca_cert.der  ca_cert.pem  generate_certificates.py  server_cert.der  server_privkey.der
networking/ETHERNET/_12_https_server_basic/src/static_web_resources/: index.html  main.js
networking/ETHERNET/_13_mqtt/: README.md  prj.conf
template/: CMakeLists.txt
template/src/: main.c
tools/docker-tcp-client/: Dockerfile  README.md  docker-compose.yml  tcp_client.py
tools/docker-tcp-echo/: Dockerfile  docker-compose.yml
tools/tcp-client-test/: README.md
tools/tcp-server-test/: README.md  tcp_echo_server.py
tools/udp-receiver-test/: README.md  udp_receiver_test.py
tools/udp-sender-test/: udp_sender_test.py
utils/_01_SRNG/: CMakeLists.txt  README.md
utils/_01_SRNG/boards/: stm32h573i_dk.conf
utils/_01_SRNG/src/: main.c
utils/_02_FPU/: CMakeLists.txt  README.md
utils/_02_FPU/boards/: stm32h573i_dk.conf
utils/_02_FPU/src/: main.c
(+125 files in other folders)
